ts-ignore error and python2 fix
supported building on m1 mac

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hyper",
-  "version": "3.3.0-canary.2",
+  "version": "3.3.0-canary.1",
   "repository": "zeit/hyper",
   "scripts": {
     "start": "echo 'please run `yarn run dev` in one tab and then `yarn run app` in another one'",
@@ -12,14 +12,10 @@
     "test:unit": "ava",
     "test:unit:watch": "yarn run test:unit -- --watch",
     "test:e2e": "ava --config ava-e2e.config.js",
-    "postinstall": "yarn run v8-snapshot && webpack --config-name hyper-app && electron-builder install-app-deps && yarn run rebuild-node-pty && cpy --cwd=target --parents \"node_modules/**/*\" \"../app/\" && husky install",
+    "postinstall": "webpack --config-name hyper-app && electron-builder install-app-deps && yarn run rebuild-node-pty && cpy --cwd=target --parents \"node_modules/**/*\" \"../app/\" && husky install",
     "rebuild-node-pty": "electron-rebuild -f -o node-pty -m target",
     "dist": "yarn run build && cross-env BABEL_ENV=production babel target/renderer/bundle.js --out-file target/renderer/bundle.js --no-comments --minified && electron-builder",
-    "clean": "node ./bin/rimraf-standalone.js node_modules && node ./bin/rimraf-standalone.js ./app/node_modules && node ./bin/rimraf-standalone.js ./app/renderer",
-    "v8-snapshot": "cross-env npm_config_arch=x64 yarn run v8-snapshot:arch && cross-env npm_config_arch=arm64 yarn run v8-snapshot:arch",
-    "v8-snapshot:arch":"yarn run mk-snapshot && yarn run cp-snapshot",
-    "mk-snapshot": "cross-env ELECTRON_CUSTOM_VERSION=$npm_package_devDependencies_electron node node_modules/electron-mksnapshot/download-mksnapshot.js && node bin/mk-snapshot.js",
-    "cp-snapshot": "node bin/cp-snapshot.js"
+    "clean": "node ./bin/rimraf-standalone.js node_modules && node ./bin/rimraf-standalone.js ./app/node_modules && node ./bin/rimraf-standalone.js ./app/renderer"
   },
   "license": "MIT",
   "author": {
@@ -28,12 +24,12 @@
   },
   "dependencies": {
     "@electron/remote": "2.0.8",
-    "args": "5.0.3",
+    "args": "5.0.1",
     "chalk": "5.0.1",
-    "color": "4.2.3",
+    "color": "4.2.1",
     "columnify": "1.6.0",
     "css-loader": "6.7.1",
-    "got": "12.1.0",
+    "got": "12.0.3",
     "json-loader": "0.5.7",
     "mousetrap": "chabou/mousetrap#useCapture",
     "ms": "2.1.3",
@@ -45,42 +41,42 @@
     "react-deep-force-update": "2.1.3",
     "react-dom": "17.0.2",
     "react-redux": "7.2.8",
-    "recast": "0.21.1",
+    "recast": "0.20.5",
     "redux": "4.1.2",
     "redux-thunk": "2.4.1",
     "reselect": "4.1.5",
     "seamless-immutable": "7.1.4",
-    "semver": "7.3.7",
+    "semver": "7.3.5",
     "shebang-loader": "0.0.1",
     "styled-jsx": "5.0.2",
     "stylis": "3.5.4",
     "uuid": "8.3.2",
     "webpack-cli": "4.9.2",
-    "xterm": "4.19.0-beta.58",
+    "xterm": "4.18.0",
     "xterm-addon-fit": "^0.5.0",
     "xterm-addon-ligatures": "0.6.0-beta.14",
     "xterm-addon-search": "^0.8.2",
     "xterm-addon-unicode11": "^0.3.0",
     "xterm-addon-web-links": "^0.5.1",
-    "xterm-addon-webgl": "0.12.0-beta.37"
+    "xterm-addon-webgl": "0.12.0-beta.27"
   },
   "devDependencies": {
     "@ava/babel": "2.0.0",
     "@ava/typescript": "^3.0.1",
-    "@babel/cli": "7.17.10",
-    "@babel/core": "7.18.2",
-    "@babel/plugin-proposal-class-properties": "^7.17.12",
+    "@babel/cli": "7.17.6",
+    "@babel/core": "7.17.8",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-proposal-numeric-separator": "^7.16.7",
-    "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
-    "@babel/plugin-proposal-optional-chaining": "7.17.12",
-    "@babel/preset-react": "7.17.12",
-    "@babel/preset-typescript": "7.17.12",
+    "@babel/plugin-proposal-object-rest-spread": "^7.17.3",
+    "@babel/plugin-proposal-optional-chaining": "7.16.7",
+    "@babel/preset-react": "7.16.7",
+    "@babel/preset-typescript": "7.16.7",
     "@types/args": "5.0.0",
     "@types/async-retry": "1.4.3",
     "@types/color": "3.0.3",
     "@types/columnify": "^1.5.1",
     "@types/fs-extra": "9.0.13",
-    "@types/lodash": "^4.14.182",
+    "@types/lodash": "^4.14.181",
     "@types/mkdirp": "1.0.2",
     "@types/mousetrap": "1.6.9",
     "@types/ms": "0.7.31",
@@ -96,17 +92,15 @@
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "4.33.0",
     "@typescript-eslint/parser": "4.33.0",
-    "ava": "4.3.0",
-    "babel-loader": "8.2.5",
-    "concurrently": "7.2.1",
-    "copy-webpack-plugin": "11.0.0",
+    "ava": "4.1.0",
+    "babel-loader": "8.2.4",
+    "concurrently": "7.1.0",
+    "copy-webpack-plugin": "10.2.4",
     "cpy-cli": "^3.1.1",
     "cross-env": "7.0.3",
-    "electron": "19.0.3",
-    "electron-builder": "^23.0.3",
+    "electron": "^17.2.0",
+    "electron-builder": "^23.0.2",
     "electron-devtools-installer": "3.2.0",
-    "electron-link": "^0.6.0",
-    "electron-mksnapshot": "19.0.0",
     "electron-notarize": "1.2.1",
     "electron-rebuild": "3.2.7",
     "electronmon": "^2.0.2",
@@ -114,22 +108,22 @@
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "7.30.0",
-    "husky": "8.0.1",
-    "inquirer": "8.2.4",
-    "node-addon-api": "5.0.0",
+    "eslint-plugin-react": "7.29.4",
+    "husky": "7.0.4",
+    "inquirer": "8.2.2",
+    "node-addon-api": "4.3.0",
     "node-gyp": "9.0.0",
     "null-loader": "4.0.1",
-    "playwright": "1.22.2",
+    "playwright": "1.20.2",
     "plist": "3.0.5",
     "prettier": "2.6.2",
     "proxyquire": "2.1.3",
     "redux-devtools-extension": "2.13.9",
     "style-loader": "3.3.1",
-    "terser": "5.14.0",
-    "ts-node": "10.8.1",
-    "typescript": "4.7.3",
-    "webpack": "5.73.0"
+    "terser": "5.12.1",
+    "ts-node": "10.7.0",
+    "typescript": "4.6.3",
+    "webpack": "5.71.0"
   },
   "electronmon": {
     "patterns": [
